--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family:'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-size: 20px;
   display: block;
   margin: auto;
@@ -29,9 +29,10 @@ body {
     text-wrap: balance;
   }
 }
-.contanier{
+.contanier {
   /* border: 12px solid black; */
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   margin-top: 55px;
@@ -39,68 +40,74 @@ body {
   margin-bottom: 55px;
 }
 
-span{
+span {
   font-size: bold;
-  color:rgb(146, 44, 73)
+  color: rgb(146, 44, 73);
 }
-label.tag{
+label.tag {
   text-decoration: underline;
   font-size: 30px;
-color:black;
-margin-bottom: 43px;
-display: block;
-text-align: center;
+  color: black;
+  margin-bottom: 43px;
+  display: block;
+  text-align: center;
 }
 
-.links li{
+.links li {
   /* border: 2px solid black; */
   text-align: center;
   font-size: 24px;
   text-decoration: underline;
-
 }
 
 /* skills */
-.boxes{
+.boxes {
   display: flex;
+  flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
 }
 
-.btn{
+.btn {
   border: 2px solid rgb(86, 4, 4);
   border-radius: 18px;
   text-align: center;
   padding: 8px;
   font-size: 15px;
   display: block;
-  margin :auto;
+  margin: auto;
   margin-top: 50px;
-  
 }
-.btn:hover{
+.btn:hover {
   background: #f04040;
-  color :antiquewhite
+  color: antiquewhite;
 }
 
 /* experiences */
 
-.box{
-  
+.box {
   border: 2px solid rgb(91, 12, 12);
   padding: 33px;
   margin: 12px;
   border-radius: 8px;
   background: rgb(229, 166, 169);
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
-.box .tag{
+.box .tag {
   color: #91057c;
   font-size: bolder;
 }
-.box:hover{
+.box:hover {
   transform: scale(1.02);
   cursor: pointer;
+}
 
-
+@media screen and (max-width:700px) and (min-width:10px) {
+  
+  .boxes{
+    flex-direction: column;
+  }
+  .contanier{
+    flex-direction: column;
+  }
 }
